--- a/docs/main.css
+++ b/docs/main.css
@@ -1,70 +1,105 @@
 .head_container {
-height : 70px;
-width : 100%;
-background-color : #313131;
-position : fixed;
-opacity : 1;
-top : 0;
-left : 0;
-z-index : 10;
+    height : 70px;
+    width : 100%;
+    background-color : #313131;
+    position : fixed;
+    opacity : 1;
+    top : 0;
+    left : 0;
+    z-index : 10;
 }
 
 .head_block {
-height : 70px;
-background-color : #313131;
-position : absolute;
-opacity : 1;
-width : 100%;
+    height : 70px;
+    background-color : #313131;
+    position : absolute;
+    opacity : 1;
+    width : 100%;
 }
 
 .head_gradient {
-width : 100%;
-height : 75px;
-background-color : #232323;
-position : absolute;
-opacity : 1;
-background: linear-gradient(90deg, #f10050 0%, #f10050 11%, #f10050 100%);
+    width : 100%;
+    height : 75px;
+    background-color : #232323;
+    position : absolute;
+    opacity : 1;
+    background: linear-gradient(90deg, #f10050 0%, #f10050 11%, #f10050 100%);
 }
 
 body {
-background-color : #000000;
-font-family: 'Lato', sans-serif;
-font-weight : 500;
-margin : 0 1vw;
+    background-color : #000000;
+    font-family: 'Lato', sans-serif;
+    font-weight : 500;
+    margin : 0 1vw;
 }
 
 h2 {
-color : #f10050;
-font-family: 'Lato', sans-serif;
-font-weight : 500;
-font-size : 50px;
-margin : 0 1vw;
+    color : #f10050;
+    font-family: 'Lato', sans-serif;
+    font-weight : 500;
+    font-size : 50px;
+    margin : 0 1vw;
 }
 
+h1 {
+    color : #f10050;
+    font-family: 'Lato', sans-serif;
+    font-weight : 600;
+    font-size : 45px;
+    margin : 0 1vw;
+}
+
+
 .head_button {
-float : left;
-height : 89px;
-text-align : center;
+    float : left;
+    height : 89px;
+    text-align : center;
 }
 
 .head_button_s {
-float : left;
-height : 89px;
-text-align : center;
-background-color : #CEE8FF;
+    float : left;
+    height : 89px;
+    text-align : center;
+    background-color : #CEE8FF;
 }
 
 .logo_button {
-float : left;
-height : 75px;
-height : 75px;
-margin-left : 10px;
-margin-right : 10px;
-text-align : center;
-padding-bottom: 2vh;
+    float : left;
+    width : 75px;
+    height : 75px;
+    margin-left : 10px;
+    margin-right : 10px;
+    text-align : center;
+    padding-bottom: 2vh;
 }
 
 .logo_button img {
-width : 70px;
-height : 64px;
+    width : 70px;
+    height : 64px;
+}
+
+.content_container {
+    margin: auto;
+    margin-top: 75px;
+    padding-top: 20px;
+    width: 90vw;
+    height: auto;
+    
+}
+
+.content_block_regular
+{
+    width: 90vw;
+    text-align : center;
+    background-color: #202020;
+    padding: 5px;
+    color : #f10050;
+    font-family: 'Lato', sans-serif;
+}
+
+.content_block_header
+{
+    width: 90vw;
+    text-align : center;
+    background-color: #303030;
 }
