--- a/docs/test.css
+++ b/docs/test.css
@@ -1,5 +1,6 @@
 body {
-    background-color : #494949;
+    background-color : #222222;
+    padding :0px;
     font-family: 'Lato', sans-serif;
     font-weight : 500;
     margin : 0 1vw;
@@ -8,6 +9,7 @@ body {
 div{
     margin: none;
     padding: none;
+    color : #797979;
 }
 h2 {
     color : #f10050;
@@ -38,7 +40,7 @@ h1 {
 
 @media screen and (max-width: 700px){
     h2 {
-        color : #f10050;
+        color : #797979;
         font-family: 'Lato', sans-serif;
         font-weight : 500;
         font-size : 20px;
@@ -130,7 +132,6 @@ h1 {
         background-color: rgba(32, 32, 32, 0.2);
         padding: 15px;
         border-radius: 5px;
-        color : #f10050;
         font-family: 'Lato', sans-serif;
     }
     .content_block_gospel
@@ -196,6 +197,7 @@ h1 {
 
 }
 
+
 @media screen and (min-width: 700px){
     #smallscreen{
         visibility: hidden;
@@ -203,97 +205,54 @@ h1 {
     #bigscreen{
         visibility: visible;
     }
-    .head_container {
-        height : 70px;
-        width : 100%;
-        background-color : #313131;
-        position : fixed;
-        opacity : 1;
-        top : 0;
-        left : 0;
-        z-index : 10;
-    }
     
-    .head_block {
-        height : 70px;
-        background-color : #313131;
-        position : absolute;
-        opacity : 1;
-        width : 100%;
+    .announcements {
+        background-color: #181818;
+        height: 200px;
+        padding: 10px;
     }
-    
-    .head_gradient {
-        width : 100%;
-        height : 75px;
-        background-color : #232323;
-        position : absolute;
-        opacity : 1;
-        background: linear-gradient(90deg, #f10050 0%, #f10050 11%, #f10050 100%);
+
+    .smalltitle{
+        font-size: 10px; 
     }
-    
-    .head_button {
-        float : left;
-        height : 89px;
-        text-align : center;
+
+    #siteheader{
+        height: 100px;
     }
-    
-    .head_button_s {
-        float : left;
-        height : 89px;
-        text-align : center;
-        background-color : #CEE8FF;
+
+    .logo{
+        width: 100px;
+        padding: 0px;
+        margin-left: 10px;
+        margin-top: 10px;
+
     }
-    
-    .logo_button {
-        float : left;
-        width : 75px;
-        height : 75px;
-        margin-left : 10px;
-        margin-right : 10px;
-        text-align : center;
-        padding-bottom: 2vh;
-    }
-    
-    .logo_button img {
-        width : 70px;
-        height : 64px;
-    }
-    
-    .content_container {
-        margin: auto;
-        margin-top: 75px;
-        padding-top: 20px;
-        width: 90vw;
-        height: auto;
+
+    .logo img{
+        width: 90px;
+        height: 90px;
         
     }
+    #links{
+        display: inline-block;
+        height: 50px;
+        padding-bottom: 20px;
+        
+    }
+    .links{
+
+        float: left;
+    }
     
-    .content_block_regular
-    {
-        width: 90vw;
-        background-color: rgba(32, 32, 32, 0.3);
-        padding: 15px;
-        border-radius: 5px;
-        color : #f10050;
-        font-family: 'Lato', sans-serif;
+
+    #links a {
+        display: block;
+        padding: 8px 25px;
+        font-size: 30px;
+        text-decoration: none;
     }
 
-    .content_block_gospel
-    {
-        width: 90vw;
-        background-color: rgba(32, 32, 32, 0.3);
-        padding: 5px;
-        border-radius: 5px;
-        color : #f10050;
-        font-family: 'Lato', sans-serif;
-    }
-    
-    .content_block_header
-    {
-        width: 90vw;
-        text-align : center;
+    .links :hover {
+        background-color: #181818;
     }
 }
-
-
-
