--- a/docs/test.css
+++ b/docs/test.css
@@ -38,6 +38,15 @@ h1 {
     font-size : 20px;
 }
 
+.left {
+    float:left;
+    margin-left: 2%;
+}
+.right {
+    float: right;
+    margin-right: 2%;
+}
+
 @media screen and (max-width: 700px){
     h2 {
         color : #797979;
@@ -213,11 +222,24 @@ h1 {
 
     .content {
         background-color: #181818;
-        height: 250px;
-        padding: 10px;
-        font-size: 19px;   
+        height: 250px;       
+        font-size: 19px;  
+        margin-bottom: 20px; 
+      
     }
-
+    
+    .textish {
+        padding: 10px;
+    }
+    .happenings {
+        background-color: #222;
+        height: 200px;
+        padding: 10px;
+        font-size: 19px;  
+        width: 45%;
+        position: relative;
+        margin-top: 10px;
+    }
     .container{
         width: 100%;
         padding: none;
